# rust-starter

./: .gitignore  Cargo.toml  LICENSE  README.md  build.Dockerfile  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml
.config/: spellcheck.toml
.devcontainer/: .env.template  README.md  compose.override.yaml.template  compose.yaml  devcontainer.Dockerfile  devcontainer.json  initialize.sh
.github/: dependabot.yml
.github/workflows/: audit.yml  build-image.yml  build.yml  clean-build-images.yml  codecov.yml  continuous-integration.yml  docker.yml  lint.yml  prepare-ci-image.yml  renovate.yml  retag-image.yml
crates/starter/: Cargo.toml
crates/starter/src/: lib.rs  main.rs
crates/starter/tests/: integration_tests.rs
crates/starter/tests/tests/: mod.rs  simple_test.rs
dockerfiles/: build.Dockerfile
examples/: Cargo.toml  starter.rs
images/ci/: Dockerfile  binstall-versions.json
images/production/: Dockerfile  about.toml  binstall-versions.json
