[workspace]
resolver = "2"

members = [
    "crates/*",
    "examples"
]

[workspace.package]
authors = ["Dan Robson <danr.236@gmail.com>"]
categories = ["starter"]
edition = "2021"
keywords = ["starter"]
license = "MIT"
repository = "https://github.com/dlrobson/rust-starter"
readme = "README.md"
version = "0.1.0"
description = """
Rust starter project.
"""

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
cargo = "warn"
pedantic = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
nonstandard_style = "warn"
refining_impl_trait = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused = "warn"
