[package]
name = "examples"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
description.workspace = true
version.workspace = true

[lint]
workspace = true

[dependencies]
starter = { version = "0.1.0", path = "../crates/starter" }

[[example]]
name = "starter"
path = "starter.rs"
